PZS-NG CHANGELOG
----------------

v1.2.0  --> 1.2.x :
		- change libcopy to better handle resolving in chroot environment (Debian in
		  particular need this fix)
v1.1.0a --> 1.2.0 :
		- added option to make accept_script run prior to complete_script.
		- fix in tv-rage tcl to compensate for layout changes.
		- fixed small bug in postdel that prevented it from removing progressbars in
		  mp3-releases. Thanks goes to |DureX| for report and fix.
		- fixed a bug in rescan that prevented it from (re-)creating mp3-symlinks.
		- added check_for_missing_sample_dirs and create_missing_sample_link vars.
		- updated psxc-imdb to 2.9g
		- changed default allowed_years to include 2008 and exclude 2004
                - we no longer manually add spaces between racers in sortstats()/racer_list,
                  so racersplit is now per default " ". Neither do we add a space after
                  racersplit_prior.
                - renamed racersplit_prior to racersplit_prefix, and removed it from conf 
                  (it's been deprecated for a while).
                - removed racersplit & racersmsg from conf. (it's been deprecated for a while)
                - added racersplit_postfix.
                - %T/%t now users racersplit* too.
		- fixed a bug re: sort_by_group - case should now no longer matter
		- added audio_artist_noid3 option to sort by releasename istf id3 info (by pp)
		- fixed small bug in speedtest dirs when mark_file_as_bad was set to TRUE.
		- fixed small bug in sample_list.
		- fixed small bug with channel announce of groups.
		- fixed bug #472 - remove metadata completely when dir is empty.
		- updated libcopy to include special libs needed on linux for chroot dnslookups
		- added psxc-trailer as part of the scripts-dir.
		- fixed bug #482 - SFV_* vars missing entry in dzsbot.vars.
		- Fixed bug #466 - enable invite for halfop.
		- Fixed bug #471 - The stats irc triggers (!allup etc) are broken when a blowfish
		  script is introduced.